--- a/SCMS/Views/Feedback/AllFeedback.cshtml
+++ b/SCMS/Views/Feedback/AllFeedback.cshtml
@@ -15,8 +15,8 @@
         {
             <tr>
                 <td>@feedback.Patient.FullName</td>
-                <td>@feedback.Content</td>
-                <td>@feedback.SubmittedAt.ToString("g")</td>
+                <td>@feedback.FeedbackText</td>
+                <td>@feedback.CreatedAt.ToString("g")</td>
             </tr>
         }
     </tbody>
